# nero-testw

./: ENHANCEMENTS.docx  ENHANCEMENTS.md  ENHANCEMENTS_GUIDE.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS.docx  IMPROVEMENTS.md  README.md  index.html  next.config.enhanced.ts  next.config.ts  osskins-improved.zip_1750255398.txt  package.json  pnpm-lock.yaml  todo.md  tsconfig.json
code_analysis/: code_issues_report.md  improvements_summary.docx  improvements_summary.md
public/: manifest.json  sw.js
scripts/: apply-enhancements.js  test-improvements.js
src/: global.d.ts
src-tauri/: Cargo.toml  build.rs  erreur  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: commands.rs.old  injection.rs.old
src-tauri/src/: debug_matchmaking.rs  debug_swift_play.rs  main.rs
src-tauri/src/commands/: custom_skins.rs  data_updates.rs  file_operations.rs  lcu_communication.rs  league_detection.rs  mod.rs  skin_management.rs  types.rs
src-tauri/src/injection/: cache.rs  error.rs  injector.rs  mod.rs  types.rs  utils.rs
src/app/: actions.ts  enhanced-globals.css  enhanced-layout.tsx  enhanced-page.tsx  error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
src/components/: AppInitializer.tsx  ChampionCard.tsx  ChampionGrid.tsx  ChampionSearch.tsx  ChromaSelector.tsx  CustomSkinCard.tsx  CustomSkinItem.tsx  CustomSkinList.tsx  DownloadingModal.tsx  EnhancedChampionCard.tsx  EnhancedLoading.tsx  ErrorBoundary.tsx  InjectionStatusDot.tsx  PartyModeDialog.tsx  SettingsDialog.tsx  SkinCard.tsx  SkinGrid.tsx  TerminalLogsDialog.tsx  ThemeToneSelector.tsx
src/components/game-directory/: GameDirectorySelector.tsx
src/components/layout/: EnhancedTopBar.tsx  TopBar.tsx
src/components/providers/: TerminalLogListener.tsx  ThemeInitializer.tsx  ThemeToneProvider.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  switch.tsx  tabs.tsx
src/lib/: data-utils.ts  store.ts  types.ts
src/lib/hooks/: use-champion-persistence.ts  use-champions.ts  use-custom-skins.ts  use-data-update.ts  use-initialization.ts  use-league-directory.ts  use-party-friends.ts  use-search-keyboard-events.ts  (+3 more)
(+5 files in other folders)
